applications/kserve/kserve-ui/upstream/components/istio/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: kserve-models-web-application
  namespace: kserve
spec:
  gateways:
  - knative-serving/knative-ingress-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /kserve-endpoints/
    rewrite:
      uri: /
    route:
    - destination:
        host: kserve-models-web-application.kserve.svc.cluster.local
        port:
          number: 80
